--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <h3><small>Best viewed on a mobile device on a warm evening, sitting in a cheap upper-deck seat with family, friends, a ballpark hot dog and your favorite cold beverage.</small></h3>
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
-                The additional pages have been set up, game summaries and batting stats/charts created. I need to think about how to to report on double-headers.<br>
+                 Going over the available pitching stats, I can see what a rabbit hole this stuff can become. There's almost 300 columns in the stats file! So right now I need to focus on the limited use-case of this app - vital stats for the more casual fan - and filter out the kind of things that appeal to the more intense fans.<br>
                  For the head 2 head page, there's some ready-made plots in the pybaseball package that would allow me to compare a few things, but mostly I'm thinking of violin plots to compare the team players. 
             </p>
             <br>
@@ -30,7 +30,7 @@
         <br>
         <h2 style='width:100%; text-align:center' id="standings"><strong>Standings</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#visualizations"><strong style='color:#FF9C00'>VISUALIZATIONS</strong></a></small></p>
-        <p>Pybaseballs gathers these from <a href="https://www.baseball-reference.com/" target="_blank">Baseball-reference.com.</a> Standings are not always updated by the time this page is, and may be slightly out of date.</p>
+        <p>Pybaseball gathers these from <a href="https://www.baseball-reference.com/" target="_blank">Baseball-reference.com.</a> Standings are not always updated by the time this page is, and may be slightly out of date.</p>
         <div class="row">
         <div class="col-md-6">
             <!--Begin schedule-->
