--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -60,18 +60,20 @@
         <div class="panel-group" id="hitaccordion" role="tablist" aria-multiselectable="true">
 
         {% for name in hit|sort(attribute='lastname') %}
-          <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="{{ name.lastname }}{{ name.R }}{{ name.H }}">
+         <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="hit{{ name.lastname }}{{ name.posnum }}">
               <h4 class="panel-title">
                 <strong>{{ name.Name }}</strong> <small>#{{ name.posnum }}, {{ name.position }}</small>
               </h4>
-              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" aria-expanded="false" aria-controls="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}"><small>CLICK HERE FOR MORE</small></a></p>
+              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#hitaccordion" href="#hitcollapse{{ name.lastname }}{{ name.posnum }}" aria-expanded="false" aria-controls="hitcollapse{{ name.lastname }}{{ name.posnum }}"><small>CLICK HERE FOR MORE</small></a></p>
 
             </div>
-            <div id="collapse{{ name.lastname }}{{ name.R }}{{ name.H }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ name.lastname }}{{ name.R }}{{ name.H }}">
+            <div id="hitcollapse{{ name.lastname }}{{ name.posnum }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ name.lastname }}{{ name.posnum }}">
               <div class="panel-body">
                  <table class='table table table-condensed table-striped'>
                     <tbody>
+                        <tr><td class='tdLEFT'>Status (A = active)</td><td>{{name.status_code}}</td></tr>
+                        <tr><td class='tdLEFT'>Bats/Throws</td><td>{{ name.bats }}/{{ name.throws }}</td></tr>
                         <tr><td class='tdLEFT'>At bats</td><td>{{ name.AB }}</td></tr>
                         <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
                         <tr><td class='tdLEFT'>Home runs</td><td>{{ name.HR }}</td></tr>
@@ -116,24 +118,26 @@
         <br>
         <h2 style='width:100%; text-align:center' id="pitchers"><strong>Pitchers</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#games"><strong style='color:#FF9C00'>GAMES</strong></a> | <a href="#batters"><strong style='color:#FF9C00'>BATTERS</strong></a></small><p>
-        <p>Click the link under a player's name to get acquainted with who's on the mound.</p>
+        <p>Click the link under a player's name to get acquainted with who's on the mound.<small><a href="https://www.fangraphs.com/library/pitching/complete-list-pitching/" target="_blank">Click here</a> for a description of these stats and more.</small></p>
 
         
         <div class="panel-group" id="pitchaccordion" role="tablist" aria-multiselectable="true">
 
         {% for toss in pitch|sort(attribute='lastname') %}
           <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="{{ toss.lastname }}{{ toss.R }}{{ toss.H }}">
+            <div class="panel-heading" role="tab" id="pitch{{ toss.lastname }}{{ toss.posname }}">
               <h4 class="panel-title">
                 <strong>{{ toss.Name }}</strong> <small>#{{ toss.posnum }}, {{ toss.position }}</small>
               </h4>
-              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#pitchaccordion" href="#collapse{{ toss.lastname }}{{ toss.posnum }}" aria-expanded="false" aria-controls="collapse{{ toss.lastname }}{{ toss.posnum }}"><small>CLICK HERE FOR MORE</small></a></p>
+              <p><a class="collapsed" role="button" data-toggle="collapse" data-parent="#pitchaccordion" href="#pitchcollapse{{ toss.lastname }}{{ toss.posnum }}" aria-expanded="false" aria-controls="pitchcollapse{{ toss.lastname }}{{ toss.posnum }}"><small>CLICK HERE FOR MORE</small></a></p>
 
             </div>
-            <div id="collapse{{ toss.lastname }}{{ toss.posnum }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ toss.lastname }}{{ toss.posnum }}">
+            <div id="pitchcollapse{{ toss.lastname }}{{ toss.posnum }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ toss.lastname }}{{ toss.posnum }}">
               <div class="panel-body">
                 <table class='table table table-condensed table-striped'>
                     <tbody>
+                        <tr><td class='tdLEFT'>Status (A = active)</td><td>{{toss.status_code}}</td></tr>
+                        <tr><td class='tdLEFT'>Bats/Throws</td><td>{{ toss.bats }}/{{ toss.throws }}</td></tr>
                         <tr><td class='tdLEFT'>Wins</td><td>{{ toss.W }}</td></tr>
                         <tr><td class='tdLEFT'>Losses</td><td>{{ toss.L }}</td></tr>
                         <tr><td class='tdLEFT'>ERA</td><td>{{ toss.ERA }}</td></tr>
