--- a/templates/sox.html
+++ b/templates/sox.html
@@ -141,7 +141,7 @@
                         <tr><td class='tdLEFT'>Wins</td><td>{{ toss.W }}</td></tr>
                         <tr><td class='tdLEFT'>Losses</td><td>{{ toss.L }}</td></tr>
                         <tr><td class='tdLEFT'>ERA</td><td>{{ toss.ERA }}</td></tr>
-                        <tr><td class='tdLEFT'>Games saved</td><td>{{ toss.GS }}</td></tr>
+                        <tr><td class='tdLEFT'>Caught stealing</td><td>{{ toss.GS }}</td></tr>
                         <tr><td class='tdLEFT'>Complete games</td><td>{{ toss.CG }}</td></tr>
                         <tr><td class='tdLEFT'>Shutouts</td><td>{{ toss.ShO }}</td></tr>
                         <tr><td class='tdLEFT'>Saves</td><td>{{ toss.SV }}</td></tr>
