added pitching charts

--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
 
-        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Baseball 2018</strong></h2>
+        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Chicago baseball</strong></h2>
             <h2 style='width:100%; text-align:center' class=' titlesmall'>Cubs</h2>
        <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i></p>
             <hr class='fancy'>
@@ -146,44 +146,21 @@
                         <tr><td class='tdLEFT'>Shutouts</td><td>{{ toss.ShO }}</td></tr>
                         <tr><td class='tdLEFT'>Saves</td><td>{{ toss.SV }}</td></tr>
                         <tr><td class='tdLEFT'>Blown saves</td><td>{{ toss.BS }}</td></tr>
+                    </tbody>
+                </table>
+                <p><strong>Pitch types</strong></p>
+                <img src="static/img/cubspitch{{ toss.lastname|string }}{{ toss.posnum|string }}.png" class="img-responsive center-block"><br>
+                <p><small>Fastball = Four Seam and Unclassified Fastballs; FS-2seam = Two Seam Fastballs; Ephesuses are a really slow ball</small></p>
+                 <table class='table table table-condensed table-striped'>
+                    <tbody>
                         <tr><td class='tdLEFT'>Average innings pitched</td><td>{{ toss.avgIP }}</td></tr>
-                        <tr><td class='tdLEFT'>Hits</td><td>{{ toss.H }}</td></tr>
-                        <tr><td class='tdLEFT'>Runs</td><td>{{ toss.R }}</td></tr>
-                        <tr><td class='tdLEFT'>Earned runs</td><td>{{ toss.ER }}</td></tr>
-                        <tr><td class='tdLEFT'>Home runs</td><td>{{ toss.HR }}</td></tr>
-                        <tr><td class='tdLEFT'>Walks</td><td>{{ toss.BB }}</td></tr>
-                        <tr><td class='tdLEFT'>Hit batters</td><td>{{ toss.HBP }}</td></tr>
-                        <tr><td class='tdLEFT'>Balks</td><td>{{ toss.BK }}</td></tr>
-                        <tr><td class='tdLEFT'>Strike outs</td><td>{{ toss.SO }}</td></tr>
-                        <tr><td class='tdLEFT'>Balls</td><td>{{ toss.Balls }}</td></tr>
-                        <tr><td class='tdLEFT'>Strikes</td><td>{{ toss.Strikes }}</td></tr>
-                        <tr><td class='tdLEFT'>Pitches</td><td>{{ toss.Pitches }}</td></tr>
                         <tr><td class='tdLEFT'>Strikeouts per 9 innings</td><td>{{ toss.K9}}</td></tr>
                         <tr><td class='tdLEFT'>Walks per 9 innings</td><td>{{ toss.BB9}}</td></tr>
+                        <tr><td class='tdLEFT'>Walks, hits per inning (WHIP)</td><td>{{ toss.WHIP }}</td></tr>
                         <tr><td class='tdLEFT'>Percent strikeouts</td><td>{{ toss.Kperc}}</td></tr>
                         <tr><td class='tdLEFT'>Percent walks</td><td>{{ toss.BBperc}}</td></tr>
                         <tr><td class='tdLEFT'>Percent left on base</td><td>{{ toss.LOBperc}}</td></tr>
                         <tr><td class='tdLEFT'>Percent first pitch strike</td><td>{{ toss.FStrikeperc}}</td></tr>
-                    </tbody>
-                </table>
-                <p><strong>Pitch types</strong></p>
-                 <table class='table table table-condensed table-striped'>
-                    <tbody>
-                        <tr><td class='tdLEFT'>Four Seam and Unclassified Fastballs</td><td>{{ toss.FAperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Two Seam Fastballs</td><td>{{ toss.FTperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Cutters</td><td>{{ toss.FCperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Split Fingers</td><td>{{ toss.FSperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Forkballs</td><td>{{ toss.FOperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Sinkers</td><td>{{ toss.SIperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Sliders</td><td>{{ toss.SLperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Curveballs</td><td>{{ toss.CUperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Knuckle-Curves</td><td>{{ toss.KCperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Ephesuses - really slow ball</td><td>{{ toss.EPperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Changeups</td><td>{{ toss.CHperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Screwballs</td><td>{{ toss.SCperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Knuckleballs</td><td>{{ toss.KNperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Unknowns</td><td>{{ toss.UNperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Wild pitches</td><td>{{ toss.WP }}</td></tr>
                     </tbody>
                 </table>
                 <p><strong>Other measures</strong></p>
@@ -191,7 +168,6 @@
                     <tbody>
                         <tr><td class='tdLEFT'>Avg. run support</td><td>{{ toss.RS }}</td></tr>
                         <tr><td class='tdLEFT'>Opponents batting average</td><td>{{ toss.AVG }}</td></tr>
-                        <tr><td class='tdLEFT'>Walks, hits per inning (WHIP)</td><td>{{ toss.WHIP }}</td></tr>
                         <tr><td class='tdLEFT'>Batting avg. on balls in play</td><td>{{ toss.BABIP }}</td></tr>
                         <tr><td class='tdLEFT'>Fielding independent pitching</td><td>{{ toss.FIP }}</td></tr>
                         <tr><td class='tdLEFT'>Win probability added (WPA)</td><td>{{ toss.WPA }}</td></tr>
