--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
 
-        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Baseball 2018</strong></h2>
+        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Chicago baseball</strong></h2>
             <h2 style='width:100%; text-align:center' class=' titlesmall'>League</h2>
        <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i></p>
             <hr class='fancy'>
@@ -23,7 +23,7 @@
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
                 I've updated the script to pull the latest rosters from MLB.com's api. Using those I can show only active players or those on the DL - and eventually have this update automatically with minimal manual interference. Connected to that, I've restructured and reorganized the overall script to group common tasks such as charting together.<br>
-                 Going over the available pitching stats, I can see what a rabbit hole this stuff can become. There's almost 300 columns in the stats file! I need to focus on the limited use-case of this app - vital stats for the more casual fan - and filter out the kind of things that appeal to the more intense fans. But right now there's a bunch of stats for each pitcher, at least until I decide what to keep and also chart. <br>
+                 Going over the available pitching stats, I can see what a rabbit hole this stuff can become. There's almost 300 columns in the stats file! I need to focus on the limited use-case of this app - vital stats for the more casual fan - and filter out the kind of things that appeal to the more intense fans. I may add/delete more stats, but I'll take some time and watch the ones I have right now.<br>
                  For the head 2 head page, there's some ready-made plots in the pybaseball package that would allow me to compare a few things, but mostly I'm thinking of violin plots to compare the team players. 
             </p>
             <br>
