--- a/templates/h2h.html
+++ b/templates/h2h.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
 
-        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Baseball 2018</strong></h2>
+        <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Chicago baseball</strong></h2>
             <h2 style='width:100%; text-align:center' class=' titlesmall'>head 2 head</h2>
        <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i></p>
             <hr class='fancy'>
