started on H2H page, worked out H2H plots design

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
         <h3><small>Best viewed on a mobile device on a warm evening, sitting in a cheap upper-deck seat with family, friends, a ballpark hot dog and your favorite cold beverage.</small></h3>
             <br>
             <p><strong>Updated {{timestamp}}</strong><br>
+                I've started on the head-2-head page by working out the design of the violin plots I want to use. Actually they're going to be more than just violin plots. There's one on the page now. I may also use some ready-made plots included in the pybaseball package.<br>
                 I've updated the script to pull the latest rosters from MLB.com's api. Using those I can show only active players or those on the DL - and eventually have this update automatically with minimal manual interference. Connected to that, I've restructured and reorganized the overall script to group common tasks such as charting together.<br>
-                 Going over the available pitching stats, I can see what a rabbit hole this stuff can become. There's almost 300 columns in the stats file! I need to focus on the limited use-case of this app - vital stats for the more casual fan - and filter out the kind of things that appeal to the more intense fans. I may add/delete more stats, but I'll take some time and watch the ones I have right now.<br>
-                 For the head 2 head page, there's some ready-made plots in the pybaseball package that would allow me to compare a few things, but mostly I'm thinking of violin plots to compare the team players. 
+                 Going over the available pitching stats, I can see what a rabbit hole this stuff can become. There's almost 300 columns in the stats file! I need to focus on the limited use-case of this app - vital stats for the more casual fan - and filter out the kind of things that appeal to the more intense fans. I may add/delete more stats, but I'll take some time and watch the ones I have right now.
             </p>
             <br>
         <hr class='fancy'>
