testing chart types

--- a/templates/h2h.html
+++ b/templates/h2h.html
@@ -49,7 +49,7 @@
                 <br>
             </div>
             <div class="col-md-8">
-                <img src="{{ url_for('static', filename='img/WPA.svg') }}" class="img-responsive center-block"><br>
+                <img type="image/svg+xml" src="{{ url_for('static', filename='img/WPA.svg') }}" class="img-responsive center-block"><br>
                 <img src="{{ url_for('static', filename='img/WPA.png') }}" class="img-responsive center-block"><br>
             </div>
         </div>
