fixing PA vs BA

--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -86,6 +86,7 @@
                     <tbody>
                         <tr><td class='tdLEFT'>Status (A = active)</td><td>{{name.status_code}}</td></tr>
                         <tr><td class='tdLEFT'>Bats/Throws</td><td>{{ name.bats }}/{{ name.throws }}</td></tr>
+                        <tr><td class='tdLEFT'>Plate appearances</td><td>{{ name.PA }}</td></tr>
                         <tr><td class='tdLEFT'>At bats</td><td>{{ name.AB }}</td></tr>
                         <tr><td class='tdLEFT'>Hits</td><td>{{ name.H }}</td></tr>
                         <tr><td class='tdLEFT'>Home runs</td><td>{{ name.HR }}</td></tr>
