--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,8 @@
     <div class="col-md-10 center-block center-blockfloat">
       <p><small>Web app by Tim Broderick <a href="mailto:tbroderick@dailyherald.com">tbroderick@dailyherald.com</a>.<br> 
       	I'm following the baseball season by developing this app, written in python/flask and utilizing the <a href ="https://github.com/jldbc/pybaseball" target="_blank">pybaseball</a> package by James LeDoux. The goal is to learn more python and baseball statistics as I gradually add features and content. All my code so far can be <a href="https://github.com/dailyherald/pybaseball" target="_blank">found here.</a> At some point, I'll set this up to update automatically each day.<br>
-      	Cool little timestamp function courtesy of <a href="https://www.palmbeachpost.com/online/contacts/mike-stucka/FjphMq55qdlRspL3H7GKoM/" target="_blank">Mike Stucka</a> of the Palm Beach Post. Thanks Mike!
+      	Cool little timestamp function courtesy of <a href="https://www.palmbeachpost.com/online/contacts/mike-stucka/FjphMq55qdlRspL3H7GKoM/" target="_blank">Mike Stucka</a> of the Palm Beach Post. Thanks Mike!<br>
+      	Hat tip to <a href="https://www.bettergov.org/team/patrick-judge">Patrick Judge</a> for the timely help on plate appearances.
       </small></p>
     </div>
   </div>
