--- a/templates/h2h.html
+++ b/templates/h2h.html
@@ -42,7 +42,7 @@
             <br>
         <hr class='fancy'>
         <br>
-        <h2 style='width:100%; text-align:center' id="batting"><strong>Batting</strong></h2>
+        <h2 style='width:100%; text-align:center' id="batting"><strong>Position players</strong></h2>
         <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#pitchers"><strong style='color:#FF9C00'>PITCHERS</strong></a></small></p>
         <p>I'll only be using non-pitchers in this comparison. I thought about excluding the DH as well, but found that to be far too difficult to figure out since anyone could peform as a DH.</p>
         <hr>
@@ -56,7 +56,8 @@
                 <h4><strong>Batting Average</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explainer text here.</p>
+                <p>Batting average is the classic measure a batter's average performance, expressed as a ratio of a batter's safe hits per official times at bat. Not to be confused with plate appearances, which is the total number of times a player has been up to bat and includes things like walks.</p>
+                <p>Honestly, anyone who confuses the two probably not have anything to do with baseball. <small>Full disclosure: I totally confused the two.</small></p>
                 <br>
             </div>
             <div class="col-md-6">
@@ -69,7 +70,7 @@
                 <h4><strong>Weighted on-base average (wOBA) </strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explainer text here.</p>
+                <p><a href="https://www.fangraphs.com/library/offense/woba/" target="_blank">Weighted On-Base Average</a> combines batting average, on-base percentage, and slugging percentage, "weighting each of them in proportion to their actual run value" according to fangraphs.com.</p>
                 <br>
             </div>
             <div class="col-md-6">
@@ -121,7 +122,7 @@
                 <h4><strong>Wins above replacement</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explaining text here.</p>
+                <p>Fangraphs describes <a href="https://www.fangraphs.com/library/misc/war/" target="_blank">Wins Above Replacement or WAR</a> as the average number of wins a player is worth compared to what you'd get from an average replacement player. The higher the WAR number, the more valuable a player is.</p>
                 <br>
             </div>
             <div class="col-md-6">
@@ -155,7 +156,7 @@
                 <h4><strong>Fielding independent pitching (FIP)</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explainer text here.</p>
+                <p><a href="https://www.fangraphs.com/library/offense/fip/" target="_blank">FIP or Fielding Independent Pitching</a> tries to show a pitcher's ERA correcting for the performance of the fielding around them. According to fangraphs, FIP looks at "their strikeouts, walks, hit batters, and home runs while assuming average luck on balls in play."</p>
                 <br>
             </div>
             <div class="col-md-6">
@@ -181,7 +182,7 @@
                 <h4><strong>Batting average on balls in play (BABIP)</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explainer text here.</p>
+                <p><a href="https://www.fangraphs.com/library/pitching/babip/" target="_blank">Batting Average on Balls In Play (BABIP)</a> measures average batting average allowed based on how often a ball in play goes for a hit. Balls in play don't include home runs. So if the pitcher is giving up a lot of hits their defense can't handle, or if you have a third baseman who doesn't make those tougher plays, the BABIP is higher.</p>
                 <br>
             </div>
             <div class="col-md-6">
@@ -221,7 +222,7 @@
                 <h4><strong>Wins above replacement (WAR)</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>Explainer text here.</p>
+                <p>Fangraphs describes <a href="https://www.fangraphs.com/library/misc/war/" target="_blank">Wins Above Replacement or WAR</a> as the average number of wins a player is worth compared to what you'd get from an average replacement player. The higher the WAR number, the more valuable a player is.</p>
                 <br>
             </div>
             <div class="col-md-6">
