updated descriptive text on H2H page, added link back to top of page for all

--- a/templates/cubs.html
+++ b/templates/cubs.html
@@ -170,8 +170,6 @@
                         <tr><td class='tdLEFT'>Strikeouts per 9 innings</td><td>{{ toss.K9}}</td></tr>
                         <tr><td class='tdLEFT'>Walks per 9 innings</td><td>{{ toss.BB9}}</td></tr>
                         <tr><td class='tdLEFT'>Walks, hits per inning (WHIP)</td><td>{{ toss.WHIP }}</td></tr>
-                        <tr><td class='tdLEFT'>Percent strikeouts</td><td>{{ toss.Kperc}}</td></tr>
-                        <tr><td class='tdLEFT'>Percent walks</td><td>{{ toss.BBperc}}</td></tr>
                         <tr><td class='tdLEFT'>Percent left on base</td><td>{{ toss.LOBperc}}</td></tr>
                         <tr><td class='tdLEFT'>Percent first pitch strike</td><td>{{ toss.FStrikeperc}}</td></tr>
                     </tbody>
@@ -199,8 +197,7 @@
 
     </div>
 </div>
-
-
+        <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a></small></p>
         </div>
     </div>
 </div>
