--- a/templates/index.html
+++ b/templates/index.html
@@ -294,6 +294,7 @@
                 <img src="{{ url_for('static', filename='img/HR.png') }}" class="img-responsive center-block"><br>
             </div>
         </div>
+        <p style='width:100%; text-align:center' ><small>JUMP TO <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a></small></p>
 
     </div>
     <div class="col-md-1"></div>
