--- a/templates/header.html
+++ b/templates/header.html
@@ -35,26 +35,7 @@ var $ = jQuery;
 </head>
 <body>
 
-<nav class="navbar navbar-default navbar-static-top" style="margin : 0 !important;">
-    <div class="container-fluid">
-
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </button>
-            <img alt="Brand" src="{{ url_for('static', filename='img/dh.png') }}"></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="http://www.dailyherald.com" target="_blank">Daily Herald</a></li>
-                <li><a href="https://i.dailyherald.com/gfx/" target="_blank">Daily Herald News Art</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+  <div>
+    <br><br>
+  </div>
+  <div style="background-color:#006BA4; height:5px; width:100%; margin:0; padding:0;"></div>
