--- a/templates/index.html
+++ b/templates/index.html
@@ -229,8 +229,7 @@
                 <h4><strong>Batting average versus Earned Run Average</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>The classic statistics - obviously a high batting average and a low ERA should equal more wins.</p>
-                <p>I don't expect there to be much of a correlation between the two stats, but it's handy to have them accessible in one chart like this.</p>
+                <p>The classic statistics - a high batting average and a low ERA should mean a successful team.</p>
                 <br>
             </div>
             <div class="col-md-8">
@@ -257,7 +256,7 @@
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
                 <p><a href="https://www.fangraphs.com/library/offense/woba/" target="_blank">Weighted On-Base Average</a> combines batting average, on-base percentage, and slugging percentage, "weighting each of them in proportion to their actual run value" according to fangraphs.com.</p>
-                <p>So these two measures should give us a pretty good idea of offensive production, if I think if it in terms of "get 'em on, get 'em over, get 'em in."</p>
+                <p>So these two measures should give us a pretty good idea of offensive production, if we think if it in terms of "get 'em on, get 'em over, get 'em in."</p>
                 <br>
             </div>
             <div class="col-md-8">
@@ -270,10 +269,9 @@
                 <h4><strong>FIP and BABIP</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>These two stats are pretty new to me.</p>
                 <p><a href="https://www.fangraphs.com/library/pitching/babip/" target="_blank">Batting Average on Balls In Play (BABIP)</a> measures average batting average allowed based on how often a ball in play goes for a hit. Balls in play don't include home runs. So if the pitcher is giving up a lot of hits their defense can't handle, or if you have a third baseman who doesn't make those tougher plays, the BABIP is higher.</p>
                 <p><a href="https://www.fangraphs.com/library/offense/fip/" target="_blank">FIP or Fielding Independent Pitching</a> tries to show a pitcher's ERA correcting for the performance of the fielding around them. According to fangraphs, FIP looks at "their strikeouts, walks, hit batters, and home runs while assuming average luck on balls in play."</p>
-                <p>With both of these measures, the lower the better. That should be a challenge given expected home run production this season.</p>
+                <p>With both of these measures, the lower the better.</p>
                 <br>
             </div>
             <div class="col-md-8">
@@ -286,8 +284,7 @@
                 <h4><strong>Team home runs</strong>
                     <br><small>Black = White Sox, Blue = Cubs.</small></h4>
                     <br>
-                <p>New York Yankees set the single-season team home run record last season, so let's see if that holds up.</p>
-                <p>The vertical red line indicates the current record of 266.</p>
+                <p>New York Yankees set the single-season team home run record last season, so let's see if that holds up. The vertical red line indicates the current record of 266.</p>
                 <br>
             </div>
             <div class="col-md-8">
