--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,5 +12,9 @@
 </div>
 <div style="background-color:#FF9C00; height:10px; width:100%; margin:0; padding:0;"></div>
 
+<script>
+$.ajaxSetup({ cache: false});
+</script>
+
 </body>
 </html>
