adding hard refresh link

--- a/templates/header.html
+++ b/templates/header.html
@@ -37,4 +37,5 @@ var $ = jQuery;
 
   <div>
     <br>
+    <p id="hard" style='text-align:center'><a href="#!"><small style='color:#FF9C00'>CLICK FOR LATEST AVAILABLE RESULTS</small></a></p>
   </div>
