--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
         <h2 style='width:100%; text-align:center' class='elexhdd' id="top"><strong>Chicago baseball</strong></h2>
             <h2 style='width:100%; text-align:center' class=' titlesmall'>League</h2>
-       <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the current season</i></p>
+       <p style='width:100%; text-align:center'><i>A little-more-than-casual but not-very-wonky statistical look at the regular season</i></p>
             <hr class='fancy'>
             <div class="row">
                 <div class="col-xs-3" style='text-align:center'>League</div>
@@ -19,8 +19,7 @@
             <br>
         <h3 style='width:100%; text-align:center' ><small>Best viewed on a mobile device on a warm evening, sitting in a cheap upper-deck seat with family, friends, a ballpark hot dog and your favorite cold beverage. Dang, can't wait to do that again.</small></h3>
             <br>
-            <p style='width:100%; text-align:center' ><strong>Updated {{timestamp}}</strong><br>
-            I update this manually at least once a week or so. </p>
+            <p style='width:100%; text-align:center' ><strong>Updated {{timestamp}}</strong></p>
             <br>
         <hr class='fancy'>
         <br>
@@ -217,7 +216,7 @@
         <p style='width:100%; text-align:center' ><small>JUMP TO  <a href="#top"><strong style='color:#FF9C00'>TOP</strong></a> | <a href="#standings"><strong style='color:#FF9C00'>STANDINGS</strong></a></small></p>
         <p>Pybaseball gets these statistics from <a href="https://www.fangraphs.com" target="_blank">fangraphs.com.</a> I'm using <a href="https://github.com/dailyherald/Seaborn" target="_blank"> Seaborn,</a>  a Python visualization library, to create the charts. Seaborn is inspired by ggplot2 in R.</p>
         <p>As far as how I decide what and how I chart, I'm using the highly sophisticated method of "Well that sounds important, I wonder what it would look like if I chart it with this other thing that sounds important." A high bar indeed.</p>
-        <h4><small>Black = White Sox, Blue = Cubs, Light Blue = KC, Red = Cleveland, Dirty Gold = Mn Twins, Orange = Detroit.</small></h4>
+        <h4><small>Black = White Sox, Blue = Cubs, Light Blue = KCR, Red = Cleveland, Dirty Gold = Twins, Orange = Detroit.</small></h4>
         <hr>
     <div class="row">
         <div class="col-md-1"></div>
@@ -271,7 +270,7 @@
                     <br>
                 <p><a href="https://www.fangraphs.com/library/pitching/babip/" target="_blank">Batting Average on Balls In Play (BABIP)</a> measures average batting average allowed based on how often a ball in play goes for a hit. Balls in play don't include home runs. So if the pitcher is giving up a lot of hits their defense can't handle, or if you have a third baseman who doesn't make those tougher plays, the BABIP is higher.</p>
                 <p><a href="https://www.fangraphs.com/library/offense/fip/" target="_blank">FIP or Fielding Independent Pitching</a> tries to show a pitcher's ERA correcting for the performance of the fielding around them. According to fangraphs, FIP looks at "their strikeouts, walks, hit batters, and home runs while assuming average luck on balls in play."</p>
-                <p>With both of these measures, the lower the better or closest to the lower left-hand corner.</p>
+                <p>With both these measures, the lower the better or closest to the lower left-hand corner.</p>
                 <br>
             </div>
             <div class="col-md-7">
