--- a/templates/sox.html
+++ b/templates/sox.html
@@ -38,7 +38,7 @@
                 {% else %}
                 <p><strong>Next scheduled game:</strong> {{ nl[2].Date }}, {% if nl[2].Home_Away == '@' %}an away game at{% else %}a game at home with{% endif %} the {{ nl[2].Team }}.</p>
                 {% endif %}
-          <!-- End of season comment out these lines -->
+          <!-- At the end of the season, comment out these lines -->
         <br>
         <h3 style='width:100%; text-align:center'>Summary results by team</h3>
         <br>
